# games-poc

./: CMakeLists.txt  LICENSE  Makefile  README.md
CliMaedn/: CMakeLists.txt  README.md  maedn.c
CursesBlocks/: CMakeLists.txt  README.md  cursesblocks.c
CursesBomber/: CMakeLists.txt  README.md  cursesbomber.c
CursesPaddle/: CMakeLists.txt  README.md  cursespaddle.c
CursesSnake/: CMakeLists.txt  README.md  cursessnake.c
NoGardenPuzzle/: CMakeLists.txt  NoGardenPuzzle.cabal  README.md
NoGardenPuzzle/src/: Main.hs
QtTicTacToe/: CMakeLists.txt  README.md  build.pro  gameboard.cpp  gameboard.hpp  gamefield.cpp  gamefield.hpp  main.cpp
