cabal-version: 2.0

name:     NoGardenPuzzle
version:  0.1.0
synopsis: Rudimentary reimplementation of the Zen Garden game on Steam
category: Game

author:      Johannes Witzig <Johannes_W@quantentunnel.de>
license:     ISC
build-type:  Simple
tested-with: GHC == 9.0.2

executable NoGardenPuzzle
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, NoImplicitPrelude
  build-depends:       base >= 4 && < 5
                     , array
                     , protolude ^>= 0.2
                     , gloss == 1.13.*
